--- a/ex-pj-admin/src/main/resources/static/admin/index.html
+++ b/ex-pj-admin/src/main/resources/static/admin/index.html
@@ -76,7 +76,15 @@
 						</li>
 						
 						<li class="active1">
-							<a class="J_menuItem" href="plate/edit.html?id=1" data-index="25">
+							<a class="J_menuItem" href="plate/edit2.html?id=1" data-index="25">
+								<i class="fa fa-home"></i>
+								<span class="nav-label">摆盘策略</span>
+								<span id="MenuNotReadCount_56" node="prevNode" class="label label-warning pull-right"></span>
+							</a>
+						</li>
+						
+						<li class="active1">
+							<a class="J_menuItem" href="anchorprice/edit.html?id=1" data-index="25">
 								<i class="fa fa-home"></i>
 								<span class="nav-label">锚定价格</span>
 								<span id="MenuNotReadCount_56" node="prevNode" class="label label-warning pull-right"></span>
@@ -94,10 +102,10 @@
 						<li>
 							 <a href="#"> 
 								<i class="fa fa-home"></i>
-								<span class="nav-label">用户管理</span> <span class="fa arrow"></span>
+								<span class="nav-label">管理</span> <span class="fa arrow"></span>
 							</a>
 							<ul class="nav nav-second-level">
-								<li><a class="J_menuItem" href="user/list.html" data-index="0">用户列表</a></li>
+								<li><a class="J_menuItem" href="user/list.html" data-index="0">列表</a></li>
 							</ul>
 						</li>
 
