--- a/ex-pj-admin/src/main/resources/static/admin/index.html
+++ b/ex-pj-admin/src/main/resources/static/admin/index.html
@@ -59,7 +59,7 @@
 							<div class="logo-element">H+</div>
 						</li>
 
-						<li class="active1">
+						<li class="active1 hidden">
 							<a class="J_menuItem" href="/sys/earningrate/earningratelist.html" data-index="25">
 								<i class="fa fa-home"></i>
 								<span class="nav-label">数据汇总</span>
@@ -67,7 +67,7 @@
 							</a>
 						</li>
 						
-						<li class="active1">
+						<li class="active1 hidden">
 							<a class="J_menuItem" href="javascript:void(0)" data-index="25">
 								<i class="fa fa-home"></i>
 								<span class="nav-label">用户持有量</span>
@@ -91,7 +91,7 @@
 							</a>
 						</li>
 						
-						<li class="active1">
+						<li class="active1 hidden">
 							<a class="J_menuItem" href="javascript:void(0)" data-index="25">
 								<i class="fa fa-home"></i>
 								<span class="nav-label">排单数据</span>
@@ -99,7 +99,7 @@
 							</a>
 						</li>
 
-						<li>
+						<li class="hidden">
 							 <a href="#"> 
 								<i class="fa fa-home"></i>
 								<span class="nav-label">管理</span> <span class="fa arrow"></span>
