项目方后台接口

--- a/ex-pj-admin/src/main/resources/static/admin/dataSummarization/list.html
+++ b/ex-pj-admin/src/main/resources/static/admin/dataSummarization/list.html
@@ -55,7 +55,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-primary pull-right">今天</span>
-                    <h5>每4小时用户持有量</h5>
+                    <h5>当前用户持有量</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">106,120</h1>
