--- a/ex-pj-admin/src/main/resources/static/admin/dataSummarization/list.html
+++ b/ex-pj-admin/src/main/resources/static/admin/dataSummarization/list.html
@@ -28,6 +28,38 @@
 
 <body class="gray-bg">
 <div class="wrapper wrapper-content">
+    <div class="col-sm-11 query-bar">
+
+        <form id="queryForm">
+            <div class="form-group" style="width: 15%; float: left;">
+                <label class="sr-only">资产</label> <input type="text" name="asset" value="USDT" placeholder="资产" id="asset" class="form-control">
+            </div>
+
+            <div class="form-group" style="width: 15%; float: left;">
+                <label class="sr-only">交易对</label>
+                <select id="symbol" class="form-control">
+                    <option value="BTC_USDT" selected="selected">BTC_USDT</option>
+                    <option value="ETH_USDT">ETH_USDT</option>
+                    <option value="EOS_USDT">EOS_USDT</option>
+                    <option value="BYM_USDT">BYM_USDT</option>
+                </select>
+            </div>
+
+            <div class="form-group" style="width: 15%; float: left;">
+                <input type="text" name="beginTime" placeholder="开始时间" id="beginTime" class="form-control time-input">
+            </div>
+
+            <div class="form-group" style="width: 15%; float: left;">
+                <input type="text" name="endTime" placeholder="结束时间" id="endTime" class="form-control time-input">
+            </div>
+
+            <div class="input-group">
+								<span class="input-group-btn">
+									<button type="button" class="btn btn-primary" id="btn_query">搜索</button>
+								</span>
+            </div>
+        </form>
+    </div>
     <div class="row">
         <div class="col-sm-3">
             <div class="ibox float-e-margins">
@@ -36,7 +68,7 @@
                     <h5>每4小时新增用户数</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">40 886,200</h1>
+                    <h1 class="no-margins" id="user_register_count">40 886,200</h1>
                 </div>
             </div>
         </div>
@@ -47,7 +79,7 @@
                     <h5>每4小时用户成交量</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">275,800</h1>
+                    <h1 class="no-margins" id="every_4_hours_user_trade_number">275,800</h1>
                 </div>
             </div>
         </div>
@@ -58,7 +90,7 @@
                     <h5>当前用户持有量</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">106,120</h1>
+                    <h1 class="no-margins" id="current_user_hold_number">106,120</h1>
                 </div>
             </div>
         </div>
@@ -69,7 +101,7 @@
                     <h5>今日用户成交量</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">80,600</h1>
+                    <h1 class="no-margins" id="today_user_trade_number">80,600</h1>
                 </div>
             </div>
         </div>
